# task-queue-db

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
src/: manage.py
src/apps/queue_app/: admin.py  apps.py  models.py  serializers.py  service.py  urls.py  views.py
src/apps/queue_app/management/commands/: generate_dummy_tasks.py
src/apps/queue_app/migrations/: 0001_initial.py
src/apps/queue_app/tests/: test_views.py
src/task_queue/: asgi.py  settings.py  urls.py  wsgi.py
